--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -20,11 +20,11 @@ jobs:
         with:
           command: validate
           arguments: -syntax-only
-          target: artifacts.pkr.json packer.json
+          target: packer/template.json
 
       - name: Build Artifact
         uses: operatehappy/packer-github-actions@master
         with:
           command: build
           arguments: "-color=false -on-error=abort"
-          target: artifacts.pkr.json packer.json
+          target: packer/template.json
