--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -5,6 +5,12 @@ jobs:
   packer:
     runs-on: ubuntu-latest
     name: packer
+    env:
+      ARM_CLIENT_ID: {{secrets.ARM_CLIENT_ID}}
+      ARM_CLIENT_SECRET: {{secrets.ARM_CLIENT_SECRET}}
+      ARM_SUBSCRIPTION_ID: {{secrets.ARM_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: {{secrets.ARM_TENANT_ID}}
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
