--- a/.github/workflows/packer.yaml
+++ b/.github/workflows/packer.yaml
@@ -5,11 +5,6 @@ jobs:
   packer:
     runs-on: ubuntu-latest
     name: packer
-    env:
-      ARM_CLIENT_ID: {{secrets.ARM_CLIENT_ID}}
-      ARM_CLIENT_SECRET: {{secrets.ARM_CLIENT_SECRET}}
-      ARM_SUBSCRIPTION_ID: {{secrets.ARM_SUBSCRIPTION_ID}}
-      ARM_TENANT_ID: {{secrets.ARM_TENANT_ID}}
 
     steps:
       - name: Checkout Repository
@@ -27,6 +22,11 @@ jobs:
           command: validate
           arguments: -syntax-only
           target: packer/template.json
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Build Artifact
         uses: operatehappy/packer-github-actions@master
@@ -34,3 +34,8 @@ jobs:
           command: build
           arguments: "-color=false -on-error=abort"
           target: packer/template.json
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
