--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -10,15 +10,10 @@
     state: present
 - name: Update apt and install docker-ce
   apt: update_cache=yes name=docker-ce state=latest
-- name: Install docker-compose
-  get_url:
-    url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
-    dest: /usr/local/bin/docker-compose
-    mode: 'u+x,g+x'
 - name: add compose templates
   template:
-    src: templates/docker-compose.yaml
-    dest: /opt/docker-compose.yaml
+    src: templates/docker-compose.yml
+    dest: /opt/docker-compose.yml
 - name: add init.sh templates
   template:
     src: templates/init.sh
