--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,7 +22,8 @@ jobs:
 
       - name: "Terraform code validation"
         run: terraform validate -no-color
-
+      - name: "Taint Current VM"
+        run: terraform taint module.modules.module.machine.azurerm_virtual_machine.feedibus-production-vm
       - name: "Terraform Plan"
         run: terraform plan -out=plan.tfplan -no-color
         env:
