nginx as entrypoint in compose wf

--- a/ansible/roles/docker/templates/docker-compose.yml
+++ b/ansible/roles/docker/templates/docker-compose.yml
@@ -1,17 +1,24 @@
 version: "3.8"
 services:
-  database:
-    image: onnythunder/bundestag-database
-    container_name: database
-  backend:
-    environment:
-      - DB_HOSTNAME=database
-    image: onnythunder/bundestag-backend
-    container_name: backend
-  frontend:
-    environment:
-      - DB_HOSTNAME=database
-    image: onnythunder/bundestag-frontend
-    container_name: frontend
+  main:
+    image: nginx:latest
+    container_name: nginx:1.19-alpine
     ports:
-      - 80:8080
+    - 80:80
+#version: "3.8"
+#services:
+#  database:
+#    image: onnythunder/bundestag-database
+#    container_name: database
+#  backend:
+#    environment:
+#      - DB_HOSTNAME=database
+#    image: onnythunder/bundestag-backend
+#    container_name: backend
+#  frontend:
+#    environment:
+#      - DB_HOSTNAME=database
+#    image: onnythunder/bundestag-frontend
+#    container_name: frontend
+#    ports:
+#      - 80:8080
