added role for nginx configuration

--- a/ansible/roles/docker/templates/docker-compose.yml
+++ b/ansible/roles/docker/templates/docker-compose.yml
@@ -1,24 +1,7 @@
 version: "3.8"
 services:
   main:
-    image: nginx:alpine
-    container_name: nginx
+    image: httpd:alpine
+    container_name: webserver
     ports:
-    - 80:80
-#version: "3.8"
-#services:
-#  database:
-#    image: onnythunder/bundestag-database
-#    container_name: database
-#  backend:
-#    environment:
-#      - DB_HOSTNAME=database
-#    image: onnythunder/bundestag-backend
-#    container_name: backend
-#  frontend:
-#    environment:
-#      - DB_HOSTNAME=database
-#    image: onnythunder/bundestag-frontend
-#    container_name: frontend
-#    ports:
-#      - 80:8080
+    - 8081:80
