--- a/.github/workflows/terraform-pr.yaml
+++ b/.github/workflows/terraform-pr.yaml
@@ -1,38 +1,28 @@
-name: "Terraform Infrastructure Deployment"
+name: "Terraform: CI - Test Terraform Configuration"
 on:
-  release:
-    types: [published]
+  pull_request:
     branches:
       - terraform-infrastructure
 jobs:
   terraform:
-    name: "run and deploy terraform config"
+    name: "Run and validate terraform"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 0.13.4
-      - name: "Preparation..."
+      - name: "Terraform initialization"
         run: terraform init
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-
-      - name: "validate"
+      - name: "Terraform code validation"
         run: terraform validate
       - name: "Terraform Plan"
-        run: terraform plan -out=plan.tfplan
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-
-      - name: "Deploy"
-        run: terraform apply -auto-approve plan.tfplan
+        run: terraform plan
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
