--- a/.github/workflows/packer-depl.yml
+++ b/.github/workflows/packer-depl.yml
@@ -80,7 +80,7 @@ jobs:
     - name: "Terraform code validation"
       run: terraform validate
     - name: "Terraform Plan"
-      run: terraform plan -out=plan.tfplan
+      run: terraform plan -out=plan.tfplan -var dockertoken={{ secrets.PACKAGES_ACCESS_TOKEN }}
       env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
@@ -88,7 +88,7 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
     - name: "Apply Terraform Configuration"
-      run: terraform apply -auto-approve plan.tfplan
+      run: terraform apply -auto-approve plan.tfplan -var dockertoken={{ secrets.PACKAGES_ACCESS_TOKEN }}
       env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
