--- a/.github/workflows/master-pr.yml
+++ b/.github/workflows/master-pr.yml
@@ -10,6 +10,8 @@ jobs:
       steps:
         - name: Setup Node
           uses: actions/setup-node@v1
+          with:
+            node-version: '14'
         - name: Checkout Repository
           uses: actions/checkout@v2
         - name: Abhängigkeiten installieren
