--- a/ansible/roles/docker/templates/docker-compose.yml
+++ b/ansible/roles/docker/templates/docker-compose.yml
@@ -1,7 +1,12 @@
 version: "3.8"
 services:
-  main:
-    image: httpd:alpine
-    container_name: webserver
+  backend:
+    image: docker.pkg.github.com/leonschbbht/feedibus/database:latest
+    container_name: database
+    expose:
+      - 5432
+  master:
+    image: docker.pkg.github.com/leonschbbht/feedibus/master:latest
+    container_name: node-master
     ports:
-    - 8081:80
+    - 8081:3000
