update pipelines for test env

--- a/.github/workflows/terraform-branch.yaml
+++ b/.github/workflows/terraform-branch.yaml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - terraform-infrastructure
+      - terraform-infrastructure-test
 jobs:
   terraform:
     name: "Run and validate terraform"
