--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint --ext .js --ext .vue . --f codeframe",
     "fix": "eslint --ext .js --ext .vue . --f codeframe --fix",
     "build": "webpack --config webpack.config.js",
-    "migrate": "knex migrate:up"
+    "migrate": "knex migrate:up",
+    "start:dev": "webpack-dev-server --mode development"
   },
   "main": "app.js",
   "dependencies": {
@@ -41,11 +42,12 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.2.11",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "vue-cli-plugin-vuetify": "~2.0.7"
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "webpack-dev-server": "^3.11.0"
   },
   "contributors": [
     "Simon Hanesch",
