--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/font": "^3.6.95",
     "@vue/cli": "^4.5.8",
     "@vue/eslint-config-standard": "^5.1.2",
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "css-loader": "^4.3.0",
     "deepmerge": "^4.2.2",
@@ -42,7 +43,8 @@
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.2.11",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "vue-cli-plugin-vuetify": "~2.0.7"
