--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "style-loader": "^2.0.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
+    "vue-router": "^3.4.9",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.2.11",
