--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vue-router": "^3.4.9",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.2.11",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
