added persistency elements for data management

--- a/ansible/roles/initial-script/tasks/main.yml
+++ b/ansible/roles/initial-script/tasks/main.yml
@@ -2,3 +2,7 @@
   template:
     src: templates/init.sh
     dest: /init.sh
+- name: add format.sh templates
+  template:
+    src: templates/format.sh
+    dest: /format.sh
