--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -9,11 +9,17 @@
     repo: deb https://download.docker.com/linux/ubuntu bionic stable
     state: present
 - name: Update apt and install docker-ce
-  apt: update_cache=yes name=docker-ce state=latest
+  apt: update_cache=yes
+    name: docker-ce
+    state: latest
 - name: add compose templates
   template:
     src: templates/docker-compose.yml
     dest: /opt/docker-compose.yml
+- name: change data directory
+  template:
+    src: templates/daemon.json
+    dest: /etc/docker/daemon.json
 - name: install iptables-persistent
   apt:
     name: iptables-persistent
