--- a/ansible/roles/docker/templates/docker-compose.yml
+++ b/ansible/roles/docker/templates/docker-compose.yml
@@ -1,14 +1,20 @@
 version: "3.8"
 services:
   backend:
-    image: docker.pkg.github.com/leonschbbht/feedibus/database:latest
+    #image: docker.pkg.github.com/leonschbbht/feedibus/database:latest
+    image: onnythunder/feedibus-database
     container_name: database
     expose:
       - 5432
+    volumes:
+      - database-volume:/mnt/extension/database
   master:
-    image: docker.pkg.github.com/leonschbbht/feedibus/master:latest
+    #image: docker.pkg.github.com/leonschbbht/feedibus/master:latest
+    image: onnythunder/feedibus-master
     container_name: node-master
     ports:
-    - 8081:3000
+      - 8081:3000
     environment:
-    - POSTGRES_HOSTNAME=database
+      - POSTGRES_HOSTNAME=database
+volumes:
+  database-volume:
