--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -8,8 +8,10 @@
   apt_repository:
     repo: deb https://download.docker.com/linux/ubuntu bionic stable
     state: present
+- name: update packagelist
+  command: apt update
 - name: Update apt and install docker-ce
-  apt: update_cache=yes
+  apt:
     name: docker-ce
     state: latest
 - name: add compose templates
