--- a/.github/workflows/master-depl.yml
+++ b/.github/workflows/master-depl.yml
@@ -29,7 +29,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: [docker, dependency]
       steps:
-      - uses: actions/checkout@v2
+        - uses: actions/checkout@v2
         with:
           ref: terraform-infrastructure
       - uses: hashicorp/setup-terraform@v1
@@ -38,28 +38,36 @@ jobs:
       - name: "Terraform initialization"
         run: terraform init
         env:
-            ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-            ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
-            ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-            ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
-      - name: "taint null resource | Remote execution provisioner"
-        run: terraform taint -allow-missing module.modules.module.machine.null_resource.init-script-execution
-        env:
-            ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-            ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
-            ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-            ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          - name: "taint null resource | Remote execution provisioner"
+            run: terraform taint -allow-missing module.modules.module.machine.null_resource.init-script-execution
+            env:
+              ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+              ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
+              ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+              ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
-      - name: "Terraform code validation"
-        run: terraform validate
-      - name: "Terraform Plan"
-        run: terraform plan -var dockertoken=${{ secrets.PACKAGES_ACCESS_TOKEN }} -out=plan.tfplan
-        env:
-            ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-            ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
-            ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-            ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          - name: "taint null resource | Remote execution provisioner - Format Script"
+            run: terraform taint -allow-missing module.modules.module.machine.null_resource.format-script-execution
+            env:
+              ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+              ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
+              ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+              ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
+          - name: "Terraform code validation"
+            run: terraform validate
+          - name: "Terraform Plan"
+            run: terraform plan -var dockertoken=${{ secrets.PACKAGES_ACCESS_TOKEN }} -out=plan.tfplan
+            env:
+              ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+              ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
+              ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+              ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
       - name: "Apply Terraform Configuration"
         run: terraform apply -auto-approve plan.tfplan
