--- a/ansible/roles/docker/templates/docker-compose.yml
+++ b/ansible/roles/docker/templates/docker-compose.yml
@@ -1,12 +1,10 @@
 version: "3.8"
 services:
-  backend:
+  database:
     image: docker.pkg.github.com/leonschbbht/feedibus/database:latest
     container_name: database
     expose:
       - 5432
-    volumes:
-      - database-volume:/mnt/extension/database
   master:
     image: docker.pkg.github.com/leonschbbht/feedibus/master:latest
     container_name: node-master
@@ -14,5 +12,3 @@ services:
       - 8081:3000
     environment:
       - POSTGRES_HOSTNAME=database
-volumes:
-  database-volume:
