--- a/.github/workflows/packer-depl.yml
+++ b/.github/workflows/packer-depl.yml
@@ -45,7 +45,7 @@ jobs:
   terraform:
     name: "Run and deploy terraform configuraiton"
     runs-on: ubuntu-latest
-    needs: [docker, dependency]
+    needs: [packer]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -55,6 +55,14 @@ jobs:
           terraform_version: 0.14.3
       - name: "Terraform initialization"
         run: terraform init
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
+      - name: "taint vm resource"
+        run: terraform taint -allow-missing module.modules.module.machine.azurerm_linux_virtual_machine.feedibus-production-virtual
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET }}
