--- a/.github/workflows/terraform-depl.yaml
+++ b/.github/workflows/terraform-depl.yaml
@@ -1,13 +1,5 @@
 name: "Terraform: CD - Deploy latest version"
-on:
-  workflow_dispatch:
-    inputs:
-      confirmation:
-        description: "Y/N"
-        required: false
-        default: "yes"
-    tags:
-      description: "Rollt die aktuelle Version der Cloud-Infrastruktur aus"
+on: workflow_dispatch
 jobs:
   terraform:
     name: "run and deploy terraform config"
